fix(color): small color adjustments

--- a/waybar/color.css
+++ b/waybar/color.css
@@ -1,4 +1,4 @@
-@define-color highlight #D3BF2E;
+@define-color highlight #ffa500;
 @define-color urgent #ea999c;
 @define-color main #2A8232; 
 @define-color text_bright #414D3E;
